[package]
name = "bounded-planet"
version = "0.1.0"
authors = ["Cylon dummies"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.1.3"
bevy_rapier3d = "0.1.1"
bevy_mod_picking = { git = "https://github.com/aevyrie/bevy_mod_picking", rev = "981fdbb" }

[patch."https://github.com/bevyengine/bevy"]
bevy = { version = "0.1.3" }
