[package]
name = "bounded-planet-pathfinding"
version = "0.1.0"
authors = ["Cylon dummies"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.2"
serde = "1.0.116"
rmp-serde = "0.14.4"
pathfinding = "2.0.4"
anyhow = "1.0.32"
thiserror = "1.0.20"
noisy_float = "0.1.13"
serde = "1.0.116"