[package]
name = "bounded-planet"
version = "0.1.0"
authors = ["Cylon dummies"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.2.1"
bevy_rapier3d = "0.2.0"
tokio = { version = "0.2.22", features = ["full"] }
structopt = "0.3.17"
tracing = "0.1"
tracing-subscriber = "0.2"
futures = "0.3.5"
tracing-futures = "0.2.4"
url = "2.1.1"
serde = "1.0.116"
rmp-serde = "0.14.4"
flate2 = "1.0.18"
futures-util = "0.3.5"
uuid = { version = "0.8", features = ["v4"] }
itertools = "0.9.0"
anyhow = "1.0.32"
thiserror = "1.0.20"
image = "0.23.10"

quinn = "0.6.1"
# rustls isn't directly needed, it's a dependency of `quinn`. The `dangerous_configuration` feature is required to bypass security in the networking.
# Make sure to recheck this versaion number when updating quinn!
rustls = { version = "0.17.0", features = [ "dangerous_configuration" ] }
webpki = { version = "0.21.3" }
