[package]
name = "bp_server_db_sqlite"
version = "0.1.0"
authors = ["Cylon dummies"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.4.0-beta.1", features = ["macros", "runtime-tokio", "sqlite"], default-features = false }
tokio = { version = "0.2.22", features = ["full"] }

anyhow = "1.0.32"